# Puget-Sound-Plumbing-and-Heating

./: .gitignore  README.md  docker-compose.full-stack-smoke.yml  package-lock.json  package.json  pytest.ini  run-tests.sh  scrape_blog.py
server/: .coveragerc  .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  database.py  dependencies.py  main.py  observability.py  pyproject.toml  pytest.ini  requirements.txt  smoke_test_api_db.py  test_s3_resume_upload.py  utils.py  vercel.json
server/alembic/: env.py
server/alembic/versions/: 0001_baseline.py  0002_offers_dedup_unique.py  0003_diy_permit_inspection_text.py
server/models/: requests.py
server/routes/: blog.py  captcha.py  careers.py  diy_permit.py  email.py  images.py  newsletter.py  offers.py  schedule.py
server/scripts/: cleanup_invalid_blog_posts.py  create_blog_posts_table.py  optimize_homepage_images.py  reclassify_blog_categories.py  report_blog_category_counts.py  sync_blog_categories_to_ui.py
server/services/: captcha_service.py  email_service.py  http_client.py  rate_limiter.py  resilience.py  s3_service.py  storage_service.py
server/sql/: create_blog_posts_table.sql  create_diy_permit_requests_table.sql  create_rate_limits_table.sql  rename_s3_columns.sql
server/tests/: TEST_COVERAGE_MAP.md  conftest.py  test_backend_coverage.py  test_blog_route.py  test_blog_routes.py  test_captcha_routes.py  test_captcha_service.py  test_careers_routes.py  test_database_module.py  test_dependencies.py  test_diy_permit_routes.py  test_email_helpers.py  test_email_route_core.py  test_email_route_job_application.py  test_email_route_redeem_and_diy.py  test_email_route_unsubscribe.py  test_email_service.py  test_image_routes.py  test_integration.py  test_main.py  test_models.py  test_newsletter_routes.py  test_observability.py  test_offers_routes.py  test_rate_limiter.py  test_routes.py  test_routes_edge_cases.py  test_schedule_routes.py  test_services.py  test_storage.py  test_utils.py
server/tests/integration/: conftest.py  (+4 more)
(+267 files in other folders)
