[project]
name = "pspah-server"
version = "0.1.0"
description = "Puget Sound Plumbing and Heating backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.22",
    "starlette>=0.47.2",
    "httpx>=0.28.1",
    "resend>=2.2.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "alembic>=1.13.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "requests>=2.32.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "pip-audit>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["venv", "alembic/versions"]

[tool.ruff.lint]
# Conservative rule set: pycodestyle errors, pyflakes, isort, modern pyupgrade.
select = ["E", "F", "I", "UP", "B", "S"]
ignore = [
    # Long URLs / comments are unavoidable in this codebase.
    "E501",
    # `assert` is fine in tests.
    "S101",
    # Containerized service intentionally binds to 0.0.0.0; this isn't a leak.
    "S104",
    # We use random.random() for probabilistic cache eviction, not crypto.
    "S311",
    # FastAPI uses `param = File(...)` / `Depends(...)` in defaults — idiomatic.
    "B008",
    # Long HTML templates are clearer with %-formatting in this codebase.
    "UP031",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
"alembic/**" = ["S608"]  # raw SQL is the whole point of migrations.

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "normal"
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["venv/", "alembic/versions/"]
strict_optional = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
